--- a/analysis/main.Rmd
+++ b/analysis/main.Rmd
@@ -114,7 +114,7 @@ unlink("manifest.R")
 
 ## Drawing maps with R
 
-In the last few years the R community has done big steps in providing friendly tools to manipulate tables extended by geographical information. The need to display such information in a simple way, coupled with the prescriptions of _tidy data_ summarized by Hadley Wickham (https://www.jstatsoft.org/article/view/v059i10) led to the development of R packages such as `sf` and `tmap`, as well as considerable improvement of the well-known R graphic library, `ggplot2`. Moreover, it is a celebrated fact that data has never been more available than today: it is also easier than ever to extract geographical information from OpenStreetMap (OSM) databases with the `osmdata` package, while staying in the R ecosystem. This package acts as a smart interface between the user and the dreaded official OSM query language, called Overpass.
+In the last few years the R community has done big steps in providing friendly tools to manipulate tables extended by geographical information. The need to display such information in a simple way, coupled with the prescriptions of _tidy data_ summarized by Hadley Wickham (https://www.jstatsoft.org/article/view/v059i10) led to the development of R packages such as [`sf`](https://cran.r-project.org/package=sf) and [`tmap`](https://cran.r-project.org/package=tmap), as well as considerable improvement of the well-known R graphic library, [`ggplot2`](https://cran.r-project.org/package=ggplot2). Moreover, it is a celebrated fact that data has never been more available than today: it is also easier than ever to extract geographical information from OpenStreetMap (OSM) databases thanks to the [`osmdata`](https://cran.r-project.org/package=osmdata) package, while staying in the R ecosystem. This package acts as a smart interface between the user and the dreaded official OSM query language, called Overpass.
 
 With this geographical "holy trinity" in the making at our disposal (even though `tmap` silently makes conversions from `sf` to the older `sp` objects), extracting the administrative boundaries of Brussels, for instance, and plotting them has therefore become not only extremely fast, easy, but also *reproducible*. In fact, when dealing with Geographical Information Systems (GIS) usually one has to worry about the sources of the files he or she is going to manipulate and display. The traditional approach consists then in opening a GIS program, such as QGIS or ArcGIS, and start clicking around one's way through the building of an appropriate map. The following solution, in turn, allows the user _to never quit the R environment_.
 
@@ -183,7 +183,7 @@ Now we have the shape of Brussels-Capital, but how do extract the municipalities
 qtm(municipalities[bxl_region, ]) +
   tm_shape(bxl_region) + tm_borders(col = 'red')
 ```
-Unfortunately, it seems that municipalities immediately outside of the Brussels region (whose borders are highlighted in red for clarity) are still included. This is probably due to the inclusion of the lines touching internal and external municipalities, and the entire polygons that includes them
+Unfortunately, it seems that municipalities immediately outside of the Brussels region (whose borders are highlighted in red for clarity) are still included. This is probably due to the inclusion of the lines common to internal and external municipalities, and the entire polygons that includes them.
 
 ### Brute-force solution
 
@@ -199,7 +199,7 @@ bxl_municipalities <- st_intersection(municipalities, bxl_region)
 
 ## Final act
 
-The output of the intersection also consists in linestrings, as we suspected from the default subsetting operation. We don't need them for the display, so we identify and exclude them.
+The output of the intersection also consists in line strings, as we suspected from the default subset operation. We don't need them for the display, so we identify and exclude them.
 
 ```{r}
 bxl_municipalities_poly <- bxl_municipalities[1:19, ]
@@ -222,6 +222,6 @@ I'm still not completely satisfied, but with more time and some more experience 
 
 On the next episode we'll see how to deal with a port city: how to take into account the coastline?
 
-## Acknoledgements
+## Acknowledgements
 
 I would like to thank Timo Grossenbacher (https://timogrossenbacher.ch) for the public release of his "template for bootstrapping reproducible RMarkdown documents for data journalistic purposes". You may clone it from here: https://github.com/grssnbchr/rddj-template.
