--- a/analysis/2017-10-10-creating-maps-with-r-and-openstreetmap.Rmd
+++ b/analysis/2017-10-10-creating-maps-with-r-and-openstreetmap.Rmd
@@ -117,7 +117,7 @@ unlink("manifest.R")
 
 In the last few years the R community has done big steps in providing friendly tools to manipulate tables extended by geographical information. The need to display such information in a simple way, coupled with the prescriptions of _tidy data_ summarized by Hadley Wickham (https://www.jstatsoft.org/article/view/v059i10) led to the development of R packages such as [`sf`](https://cran.r-project.org/package=sf) and [`tmap`](https://cran.r-project.org/package=tmap), as well as considerable improvement of the well-known R graphic library, [`ggplot2`](https://cran.r-project.org/package=ggplot2). Moreover, it is a celebrated fact that data has never been more available than today: thanks to the [`osmdata`](https://cran.r-project.org/package=osmdata) package, it is now also easier than ever to extract geographical information from OpenStreetMap (OSM) databases, while staying in the R ecosystem. This package acts as a smart interface between the user and the dreaded official OSM query language, called Overpass.
 
-With this geographical "holy trinity" in the making at our disposal (even though `tmap` still silently makes conversions from `sf` to the older [`sp`](https://cran.r-project.org/package=sp) objects), has therefore allowed beginner users to set-up fast, but also *reproducible* workflows. In fact, when dealing with Geographical Information Systems (GIS) a traditional approach consists in opening a GIS program with a GUI, such as QGIS or ArcGIS, and start clicking around one's way through the building of an appropriate map. The R tools at our disposal, in turn, allow the user to keep full track of his or her actions, maintain this track and share it with other users.
+With this geographical "holy trinity" in the making at our disposal (even though `tmap` still silently makes conversions from `sf` to the older [`sp`](https://cran.r-project.org/package=sp) objects), it is therefore possible for beginner users to set-up fast, but also *reproducible* workflows. In fact, when dealing with Geographical Information Systems (GIS) a traditional approach consists in opening a GIS program with a GUI, such as QGIS or ArcGIS, and start clicking around one's way through the building of an appropriate map. The R tools at our disposal, in turn, allow the user to keep full track of his or her actions, maintain this track and share it with other users.
 
 As an exercise, I'm going to display the boundaries of the municipalities located in the Belgian region of Brussels-Capital. Despite the fact that the workflow is rather linear on paper, some _caveats_ and a critical approach are still necessary, and this is what motivated me to write this blog post. My approach to this matter is certainly not original, and I don't expect to teach anything new to the more experienced R users. On the contrary, real R beginners may struggle in following some of the language shortcuts.
 
